2013-07-24  Glenn Morris  <rgm@gnu.org>

	* dired-x.el (dired-mark-extension): Convert comment to doc string.

2013-07-20  Glenn Morris  <rgm@gnu.org>

	* image-dired.el (image-dired-track-original-file):
	Avoid changing point of wrong window.  (Bug#14909)

2013-07-18  Richard Copley  <rcopley@gmail.com>  (tiny change)

	* progmodes/gdb-mi.el (gdb-done-or-error):
	Guard against "%" in gdb output.  (Bug#14127)

2013-07-08  Andreas Schwab  <schwab@linux-m68k.org>

	* progmodes/sh-script.el (sh-read-variable): Remove interactive
	spec.  (Bug#14826)

2013-07-03  Glenn Morris  <rgm@gnu.org>

	* subr.el (y-or-n-p): Handle empty prompts.  (Bug#14770)

2013-05-26  Fabián Ezequiel Gallina  <fgallina@gnu.org>

	* progmodes/python.el (python-indent-block-enders): Add break,
	continue and raise keywords.

2013-05-08  Ulrich Mueller  <ulm@gentoo.org>

	* descr-text.el (describe-char): Fix %d/%x typo.  (Bug#14360)

2013-04-24  Glenn Morris  <rgm@gnu.org>

	* subr.el (read-number): Once more use `read' rather than
	`string-to-number', to trap non-numeric input.  (Bug#14254)

2013-04-22  Erik Charlebois  <erikcharlebois@gmail.com>

	* emacs-lisp/syntax.el (syntax-propertize-multiline):
	Use `syntax-multiline' text property consistently instead of
	`font-lock-multiline'. (bug#14237).

2013-04-06  Stefan Monnier  <monnier@iro.umontreal.ca>

	* eshell/em-prompt.el (eshell-emit-prompt): Make sure we can't insert
	into the prompt either (bug#13963).

2013-03-26  Fabián Ezequiel Gallina  <fabian@anue.biz>

	Un-indent after "pass" and "return" statements (Bug#13888)
	* progmodes/python.el (python-indent-block-enders): New var.
	(python-indent-calculate-indentation): Use it.

2013-03-25  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-drop-volume-letter): Make it an ordinary
	defun.  Defining it as defalias could introduce too eager
	byte-compiler optimization.  (Bug#14030)

2013-03-25  Chong Yidong  <cyd@gnu.org>

	* iswitchb.el (iswitchb-read-buffer): Fix typo.
